NLP TP/texts/robotics/robotics.stackexchange_0000049586.txt
Q:

errors installing groovy on mac osx homebrew (pydot)

I am getting the following error while trying to do a fresh install of groovy on my mac (10.7.5) with homebrew:
Any suggestions?
$ rosdep install --from-paths src --ignore-src --rosdistro groovy -y
executing command [sudo pip install -U pydot]
Password:
Downloading/unpacking pydot
  Running setup.py egg_info for package pydot
    Couldn't import dot_parser, loading of dot files will not be possible.
    
Downloading/unpacking pyparsing (from pydot)
  Running setup.py egg_info for package pyparsing
    Traceback (most recent call last):
      File "<string>", line 14, in <module>
      File "/Users/mike/ros_catkin_ws/build/pyparsing/setup.py", line 9, in <module>
        from pyparsing import __version__ as pyparsing_version
      File "pyparsing.py", line 629
        nonlocal limit,foundArity
                     ^
    SyntaxError: invalid syntax
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):

  File "<string>", line 14, in <module>

  File "/Users/mike/ros_catkin_ws/build/pyparsing/setup.py", line 9, in <module>

    from pyparsing import __version__ as pyparsing_version

  File "pyparsing.py", line 629

    nonlocal limit,foundArity

                 ^

SyntaxError: invalid syntax

----------------------------------------
Command python setup.py egg_info failed with error code 1
Storing complete log in /Users/mike/.pip/pip.log
ERROR: the following rosdeps failed to install
  pip: command [sudo pip install -U pydot] failed

Originally posted by Mike Bosse on ROS Answers with karma: 41 on 2013-03-20
Post score: 3

A:

Looks like pyparsing switched its default version to py3k only:
http://pyparsing.wikispaces.com/News
I guess you will have to install version 1.5.7 explicitly:
$ sudo pip install pyparsing==1.5.7

I haven't run into this, but I assume that's because I already have pyparsing installed from before this change.

Originally posted by William with karma: 17335 on 2013-03-21
This answer was ACCEPTED on the original site
Post score: 3

